# sanjeevani

./: .env.example  .gitignore  README.md  STATE.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: aggregator.py  answer.py  emit.py  graph.py  intent.py  jury_lookup.py  moa.py  planner.py  retriever.py  state.py  tiebreaker.py  validator.py
backend/app/agents/retrieval/: hybrid.py  rerank.py  sql_prefilter.py
backend/app/data/: databricks_sql.py
backend/app/llm/: bedrock.py  databricks_serving.py
backend/app/retrieval/: index.py
backend/app/streaming/: sse.py
backend/scripts/: coverage_check.py
backend/tests/: test_sse.py
databricks/lib/: parsers.py
databricks/notebooks/: 00_setup_uc.py  01_bronze_silver.py  02_extract.py  05_embeddings.py  06_jury.py  07_tiebreaker.py  08_aggregates.py  09_trust_scores.py
databricks/tests/: test_parsers.py
docs/: CHALLENGE.md  OVERVIEW.md  SUBMISSION.md  sse-event-contract.md
docs/superpowers/notes/: 2026-04-26-map-rebuild-context.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/atlas/: page.tsx
frontend/lib/: live-facilities-store.ts  sse-adapter.ts  sse.ts  types.ts
frontend/public/: facilities.min.json  india-districts.geo.json  india-states.geo.json
frontend/scripts/: build-facilities-json.cjs
frontend/styles/: about.css  atlas.css  citation.css  drawer.css  explorer.css  shell.css  splash.css  tokens.css  trace.css  trust.css
scripts/: integration_check.sh  sanity_check.py
(+63 files in other folders)
