[project]
name = "sanjeevani-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic[bedrock]>=0.40",
    "openai>=1.55",
    "databricks-sql-connector>=3.5",
    "langgraph>=1.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "mlflow>=3.0",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "rank-bm25>=0.2.2",
    "numpy>=2.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
